fix(CompanyWheel): Further tweaks on dynamic spacing of wheel

--- a/app/components/CompanyWheel/WheelRayLegend/styles.scss
+++ b/app/components/CompanyWheel/WheelRayLegend/styles.scss
@@ -1,3 +1,3 @@
 .TextLabels{
-  color: #4054B7;
+  fill: #4054B7;
   }
